--- a/Cookify.Web/Views/Shared/_Layout.cshtml
+++ b/Cookify.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Ingredient" asp-action="Index">Ingredient</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RecipeCategory" asp-action="Index">RecipeCategory</a>
+                        </li>
                     </ul>
                 </div>
             </div>
