--- a/Cookify.Web/Views/Ingredient/Index.cshtml
+++ b/Cookify.Web/Views/Ingredient/Index.cshtml
@@ -20,6 +20,9 @@
                         Id
                     </th>
                     <th>
+                        Name
+                    </th>
+                    <th>
                         Description
                     </th>
                 </tr>
@@ -27,10 +30,11 @@
             <tbody>
                 @foreach (var ingredient in Model)
                 {
-                    <tr>
-                        <td width="50%">@ingredient.Id</td>
-                        <td width="50%">@ingredient.Description</td>
-                    </tr>
+                <tr>
+                    <td width="20%">@ingredient.Id</td>
+                    <td width="30%">@ingredient.Name</td>
+                    <td width="50%">@ingredient.Description</td>
+                </tr>
                 }
             </tbody>
         </table>
