--- a/Cookify.Web/Views/Shared/Components/SearchPopup/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/SearchPopup/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="popup" id="search-popup">
-    <div class="popup__closer">
+    <div class="popup__closer close-search-popup">
         <img src="~/assets/icons/components/close-white.svg" alt="Zamknij" />
     </div>
     <div class="popup__content">
