--- a/Cookify.Web/wwwroot/scss/base/_typography.scss
+++ b/Cookify.Web/wwwroot/scss/base/_typography.scss
@@ -18,3 +18,8 @@ h1, h2, h3, h4, h5, h6{
 .montserrat{
   font-family: 'Montserrat', sans-serif;
 }
+
+a{
+  text-decoration: none;
+  color: $grey-700;
+}
