--- a/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
@@ -1,4 +1,44 @@
-﻿<header>
+﻿<nav class="ck-nav ck-container">
+    <a asp-area="" asp-controller="Home" asp-action="Index" class="ck-nav__logo">
+        <img src="~/assets/icons/components/logo.svg" alt="Cookify Logo" />
+    </a>
+
+    <div class="ck-nav__links">
+        <a asp-area="" asp-controller="Home" asp-action="Index" class="ck-nav__links__item active">
+            <img src="~/assets/icons/components/home-orange.svg" alt="Strona główna" />
+            <span>Strona główna</span>
+        </a>
+        <a asp-area="" asp-controller="Recipe" asp-action="Index" class="ck-nav__links__item">
+            <img src="~/assets/icons/components/food-orange.svg" alt="Przepisy" />
+            <span>Przepisy</span>
+        </a>
+        <div class="ck-nav__links__item">
+            <img src="~/assets/icons/components/book-orange.svg" alt="Kategorie" />
+            <span>Kategorie</span>
+        </div>
+        <div class="ck-nav__links__item open-search-popup">
+            <img src="~/assets/icons/components/search-orange.svg" alt="Szukaj" />
+            <span>Szukaj</span>
+        </div>
+        <a href="#" class="ck-nav__links__item">
+            <img src="~/assets/icons/components/checked-list-orange.svg" alt="Lista zakupów" />
+            <span>Lista zakupów</span>
+        </a>
+        <a href="#" class="ck-nav__links__item">
+            <img src="~/assets/icons/components/heart-orange.svg" alt="Ulubione" />
+            <span>Ulubione</span>
+        </a>
+        <a href="#" class="ck-nav__links__item">
+            <img src="~/assets/icons/components/user-orange.svg" alt="Profil" />
+            <span>Profil</span>
+        </a>
+    </div>
+</nav>
+<div class="ck-nav-height"></div>
+
+
+LINKS LINKS LINKS
+<header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Cookify</a>
@@ -11,9 +51,6 @@
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Ingredient" asp-action="Index">Ingredients</a>
@@ -32,3 +69,4 @@
         </div>
     </nav>
 </header>
+LINKS LINKS LINKS
