--- a/Cookify.Web/wwwroot/scss/base/_reset.scss
+++ b/Cookify.Web/wwwroot/scss/base/_reset.scss
@@ -17,6 +17,7 @@ html{
 body{
   overflow-x: hidden;
   position: relative;
+  background-color: $cream;
 
   //iphone lul
   @media (hover: none) {
