--- a/Cookify.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Cookify.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @model RegisterModel
+@using Cookify.Utility 
 @{
     ViewData["Title"] = "Register";
 }
@@ -31,6 +32,13 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            @if (User.IsInRole(StaticDetails.Role_Admin))
+            {
+                <div class="form-group">
+                    <label asp-for="Input.Role"></label>
+                    @Html.DropDownListFor(m=>m.Input.RoleList, Model.Input.RoleList,"-Please select a role", new { @class = "form-control" })
+                </div>
+            }
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
