--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -9,6 +9,7 @@
 
 @import "./vendors/bootstrap";
 
+@import "./components/favorite-heart";
 @import "./components/popup";
 @import "./components/recipe-brief";
 
