--- a/Cookify.Web/Views/RecipeCategory/Index.cshtml
+++ b/Cookify.Web/Views/RecipeCategory/Index.cshtml
@@ -7,6 +7,9 @@
     <div class="col-6">
         <h2 class="text-primary">List of recipe categories:</h2>
     </div>
+    <div class="col-6 text-right">
+        <a class="btn btn-primary text-light" asp-action="Upsert">Create New Recipe Category</a>
+    </div>
 </div>
 
 <br />
@@ -25,12 +28,14 @@
                 </tr>
             </thead>
             <tbody>
-                @foreach (var recipeCategories in Model)
+                @foreach (var recipeCategory in Model)
                 {
-                    <tr>
-                        <td width="20%">@recipeCategories.Id</td>
-                        <td width="80%">@recipeCategories.Title</td>
-                    </tr>
+                <tr>
+                    <td width="10%">@recipeCategory.Id</td>
+                    <td width="70%">@recipeCategory.Title</td>
+                    <td width="10%"><a asp-action="Upsert" asp-route-id="@recipeCategory.Id">Edit</a></td>
+                    <td width="10%"><a asp-action="Delete" asp-route-id="@recipeCategory.Id">Delete</a></td>
+                </tr>
                 }
             </tbody>
         </table>
