--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -10,6 +10,7 @@
 @import "./vendors/bootstrap";
 
 @import "./components/admin-panels";
+@import "./components/dropdown-menu";
 @import "./components/favorite-heart";
 @import "./components/popup";
 @import "./components/recipe-brief";
