--- a/Cookify.Web/wwwroot/scss/layout/_nav.scss
+++ b/Cookify.Web/wwwroot/scss/layout/_nav.scss
@@ -3,6 +3,8 @@
   @include rect(100%, 60px);
   @include d-flex($jc: space-between, $ai: center);
   background: $white;
+  z-index: 100;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.02);
 
   &-height{
     height: 60px;
@@ -27,7 +29,7 @@
         @include transition;
       }
 
-      & span{
+      & > span, > a{
         @include transition;
         font-weight: bold;
       }
@@ -37,7 +39,7 @@
           filter: brightness(1);
         }
 
-        & span{
+        & > span, & > a{
           color: $orange;
         }
       }
