--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -10,11 +10,14 @@
 @import "./vendors/bootstrap";
 
 @import "./components/admin-panels";
+@import "./components/buttons";
 @import "./components/dropdown-menu";
 @import "./components/favorite-heart";
 @import "./components/popup";
 @import "./components/recipe-brief";
+@import "./components/table";
 
+@import "./layout/admin-header";
 @import "./layout/container";
 @import "./layout/nav";
 
