--- a/Cookify.Web/Areas/Admin/Views/Image/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/Image/Index.cshtml
@@ -1,46 +1,41 @@
-﻿<br />
-<div class="row">
-    <div class="col-6">
-        <h2 class="text-primary">List of images:</h2>
-    </div>
+﻿<div class="admin-header">
+    <h1 class="admin-header__title">Zdjęcia</h1>
 </div>
 
-<br />
-<div class="p-4 border rounded">
-    @if (Model.Count > 0)
-    {
-        <table class="table table-bordered table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>
-                        Id
-                    </th>
-                    <th>
-                        Path / URL
-                    </th>
-                    <th>
-                        Title
-                    </th>
-                    <th>
-                        Preview
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var image in Model)
-                {
-                <tr>
-                    <td width="20%">@image.Id</td>
-                    <td width="30%"><a href="@image.Path">@image.Path</a></td>
-                    <td width="20%">@image.Title</td>
-                    <td width="30%"><img src="@image.Path" alt="@image.Title" width="200px" /></td>
-                </tr>
-                }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <p>There are no images in the database!</p>
-    }
-</div>
+
+@if (Model.Count > 0)
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th width="20%">
+                    Id
+                </th>
+                <th width="30%">
+                    Path / URL
+                </th>
+                <th width="20%">
+                    Title
+                </th>
+                <th width="30%">
+                    Preview
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var image in Model)
+            {
+            <tr>
+                <td width="20%">@image.Id</td>
+                <td width="30%"><a href="@image.Path">@image.Path</a></td>
+                <td width="20%">@image.Title</td>
+                <td width="30%"><img src="@image.Path" alt="@image.Title" width="200px" /></td>
+            </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <p>There are no images in the database!</p>
+}
