--- a/Cookify.Web/Areas/Admin/Views/Recipe/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/Recipe/Index.cshtml
@@ -1,55 +1,53 @@
-﻿<br />
-<div class="row">
-    <div class="col-6">
-        <h2 class="text-primary">List of recipes:</h2>
-    </div>
-    <div class="col-6 text-right">
-        <a class="btn btn-primary text-light" asp-action="Upsert">Create New Recipe</a>
-    </div>
+﻿<div class="admin-header">
+    <h1 class="admin-header__title">Przepisy</h1>
+    <a asp-action="Upsert" class="admin-btn">Dodaj nowy</a>
 </div>
 
-<br />
-<div class="p-4 border rounded">
-    @if (Model.Count > 0)
-    {
-        <table class="table table-bordered table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>
-                        Id
-                    </th>
-                    <th>
-                        Name
-                    </th>
-                    <th>
-                        Description
-                    </th>
-                    <th>
-                        Accepted
-                    </th>
-                    <th>
-                        Category
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var recipe in Model)
-                {
+@if (Model.Count > 0)
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th width="10%">
+                    Id
+                </th>
+                <th width="20%">
+                    Name
+                </th>
+                <th width="30%">
+                    Description
+                </th>
+                <th width="10%">
+                    Accepted
+                </th>
+                <th width="10%">
+                    Category
+                </th>
+                <th width="10%">
+                    Edit
+                </th>
+                <th width="10%">
+                    Delete
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var recipe in Model)
+            {
                 <tr>
                     <td width="10%">@recipe.Id</td>
                     <td width="20%">@recipe.Name</td>
                     <td width="30%">@recipe.Description</td>
                     <td width="10%"><input type="checkbox" checked="@recipe.Accepted" /></td>
                     <td width="10%">@recipe.RecipeCategory.Title</td>
-                    <td width="10%"><a asp-action="Upsert" asp-route-id="@recipe.Id">Edit</a></td>
-                    <td width="10%"><a asp-action="Delete" asp-route-id="@recipe.Id">Delete</a></td>
+                    <td width="10%"><a asp-action="Upsert" asp-route-id="@recipe.Id" class="admin-btn">Edit</a></td>
+                    <td width="10%"><a asp-action="Delete" asp-route-id="@recipe.Id" class="admin-btn">Delete</a></td>
                 </tr>
-                }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <p>There are no images in the database!</p>
-    }
-</div>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <p>There are no recipes in the database!</p>
+}
