--- a/Cookify.Web/Areas/Admin/Views/RecipeCategory/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/RecipeCategory/Index.cshtml
@@ -1,43 +1,41 @@
-﻿<br />
-<div class="row">
-    <div class="col-6">
-        <h2 class="text-primary">List of recipe categories:</h2>
-    </div>
-    <div class="col-6 text-right">
-        <a class="btn btn-primary text-light" asp-action="Upsert">Create New Recipe Category</a>
-    </div>
+﻿<div class="admin-header">
+    <h1 class="admin-header__title">Kategorie</h1>
+    <a asp-action="Upsert" class="admin-btn">Dodaj nową</a>
 </div>
 
-<br />
-<div class="p-4 border rounded">
-    @if (Model.Count > 0)
-    {
-        <table class="table table-bordered table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>
-                        Id
-                    </th>
-                    <th>
-                        Title
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var recipeCategory in Model)
-                {
-                <tr>
-                    <td width="10%">@recipeCategory.Id</td>
-                    <td width="70%">@recipeCategory.Title</td>
-                    <td width="10%"><a asp-action="Upsert" asp-route-id="@recipeCategory.Id">Edit</a></td>
-                    <td width="10%"><a asp-action="Delete" asp-route-id="@recipeCategory.Id">Delete</a></td>
-                </tr>
-                }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <p>There are no recipe categories in the database!</p>
-    }
-</div>
+@if (Model.Count > 0)
+{
+    <table class="table">
+        <thead>
+            <tr>
+                <th width="10%">
+                    Id
+                </th>
+                <th width="70%">
+                    Title
+                </th>
+                <th width="10%">
+                    Edit
+                </th>
+                <th width="10%">
+                    Delete
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var recipeCategory in Model)
+            {
+            <tr>
+                <td width="10%">@recipeCategory.Id</td>
+                <td width="70%">@recipeCategory.Title</td>
+                <td width="10%"><a asp-action="Upsert" asp-route-id="@recipeCategory.Id" class="admin-btn">Edit</a></td>
+                <td width="10%"><a asp-action="Delete" asp-route-id="@recipeCategory.Id" class="admin-btn">Delete</a></td>
+            </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <p>There are no recipe categories in the database!</p>
+}
