--- a/Cookify.Web/Areas/Admin/Views/RecipeCategory/Upsert.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/RecipeCategory/Upsert.cshtml
@@ -5,37 +5,29 @@
 }
 
 <form method="post">
-    <div class="row p-3 border">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        @if (Model.Id != 0)
-        {
-            title = "Edit recipe category";
-        }
-        <div class="col-12 border-bottom">
-            <h2 class="text-primary">@title</h2>
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    @if (Model.Id != 0)
+    {
+        title = "Edit recipe category";
+    }
+    <div class="admin-header">
+        <h1 class="admin-header__title">@title</h1>
+    </div>
+    <div class="admin-form">
+        <div class="admin-form__group">
+            <label asp-for="Title"></label>
+            <input asp-for="Title" />
+            <span asp-validation-for="Title" class="text-danger"></span>
         </div>
-        <div class="col-8 pt-4">
-            <div class="form-group row">
-                <div class="col-4">
-                    <label asp-for="Title"></label>
-                </div>
-                <div class="col-8">
-                    <input asp-for="Title" class="form-control" />
-                    <span asp-validation-for="Title" class="text-danger"></span>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-8 offset-4">
-                    @if (Model.Id != 0)
-                    {
-                        <partial name="_EditAndGoBackButton" model="Model.Id" />
-                    }
-                    else
-                    {
-                        <partial name="_CreateAndGoBackButton" />
-                    }
-                </div>
-            </div>
+        <div class="admin-form__actions">
+            @if (Model.Id != 0)
+            {
+                <partial name="_EditAndGoBackButton" model="Model.Id" />
+            }
+            else
+            {
+                <partial name="_CreateAndGoBackButton" />
+            }
         </div>
     </div>
 </form>
