--- a/Cookify.Web/Views/Shared/_CreateAndGoBackButton.cshtml
+++ b/Cookify.Web/Views/Shared/_CreateAndGoBackButton.cshtml
@@ -1,8 +1,4 @@
-﻿<div class="row">
-    <div class="col">
-        <button type="submit" class="btn btn-primary form-control">Create</button>
-    </div>
-    <div class="col">
-        <a asp-action="Index" class="btn btn-primary form-control">Go back</a>
-    </div>
+﻿<div class="admin-btn-group">
+    <button type="submit" class="admin-btn">Create</button>
+    <a asp-action="Index" class="admin-btn">Go back</a>
 </div>
