--- a/Cookify.Web/Views/Shared/_EditAndGoBackButton.cshtml
+++ b/Cookify.Web/Views/Shared/_EditAndGoBackButton.cshtml
@@ -1,10 +1,6 @@
 ﻿@model int
 
-<div class="row">
-    <div class="col">
-        <button type="submit" class="btn btn-primary form-control" asp-route-id="@Model">Update</button>
-    </div>
-    <div class="col">
-        <a asp-action="Index" class="btn btn-primary form-control">Go back</a>
-    </div>
+<div class="admin-btn-group">
+    <button type="submit" class="admin-btn" asp-route-id="@Model">Update</button>
+    <a asp-action="Index" class="admin-btn">Go back</a>
 </div>
