--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -9,6 +9,7 @@
 
 @import "./vendors/bootstrap";
 
+@import "./components/admin-form";
 @import "./components/admin-panels";
 @import "./components/buttons";
 @import "./components/dropdown-menu";
