--- a/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/Nav/Default.cshtml
@@ -12,7 +12,7 @@
             <img src="~/assets/icons/components/food-orange.svg" alt="Przepisy" />
             <span>Przepisy</span>
         </a>
-        <div class="ck-nav__links__item">
+        <div class="ck-nav__links__item open-category-popup">
             <img src="~/assets/icons/components/book-orange.svg" alt="Kategorie" />
             <span>Kategorie</span>
         </div>
