--- a/Cookify.Web/Views/Shared/Components/SearchPopup/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/SearchPopup/Default.cshtml
@@ -1,8 +1,17 @@
-﻿<div class="popup" id="search-popup">
+﻿<div class="popup search-popup" id="search-popup">
     <div class="popup__closer close-search-popup">
         <img src="~/assets/icons/components/close-white.svg" alt="Zamknij" />
     </div>
     <div class="popup__content">
-        <div class="popup__content__title">Na co masz dzisiaj ochotę?</div>
+        <div class="popup__content__title h1">Na co masz dzisiaj ochotę?</div>
+        <partial name="_SearchBarPartial" />
+        <div class="title-card-group">
+            <div class="title-card mobile-h2 open-category-popup">
+                Przeglądaj kategorie
+            </div>
+            <div class="title-card mobile-h2 open-ingredient-popup">
+                Szukaj wg. składników
+            </div>
+        </div>
     </div>
 </div>
