--- a/Cookify.Web/wwwroot/scss/base/_typography.scss
+++ b/Cookify.Web/wwwroot/scss/base/_typography.scss
@@ -27,3 +27,15 @@ a{
 .text-danger{
   color: $dark-red;
 }
+
+.h1{
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 59px;
+}
+
+.mobile-h2{
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+}
