--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -16,7 +16,9 @@
 @import "./components/favorite-heart";
 @import "./components/popup";
 @import "./components/recipe-brief";
+@import "./components/search-bar";
 @import "./components/table";
+@import "./components/title-card";
 
 @import "./layout/admin-header";
 @import "./layout/container";
