--- a/Cookify.Web/wwwroot/scss/base/_reset.scss
+++ b/Cookify.Web/wwwroot/scss/base/_reset.scss
@@ -28,3 +28,21 @@ body{
     cursor: pointer;
   }
 }
+
+input{
+  border: none;
+
+  &:focus{
+    outline: none;
+  }
+}
+
+button{
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+
+  &:focus{
+    outline: none;
+  }
+}
