--- a/Cookify.Web/Areas/Admin/Views/Recipe/Index.cshtml
+++ b/Cookify.Web/Areas/Admin/Views/Recipe/Index.cshtml
@@ -11,22 +11,28 @@
                 <th width="10%">
                     Id
                 </th>
-                <th width="20%">
+                <th width="15%">
                     Name
                 </th>
-                <th width="30%">
+                <th width="25%">
                     Description
-                </th>
-                <th width="10%">
-                    Accepted
                 </th>
                 <th width="10%">
                     Category
                 </th>
                 <th width="10%">
-                    Edit
+                    Difficulty Level
                 </th>
                 <th width="10%">
+                    Preparation Time
+                </th>
+                <th width="10%">
+                    Accepted
+                </th>
+                <th width="5%">
+                    Edit
+                </th>
+                <th width="5%">
                     Delete
                 </th>
             </tr>
@@ -34,15 +40,17 @@
         <tbody>
             @foreach (var recipe in Model)
             {
-                <tr>
-                    <td width="10%">@recipe.Id</td>
-                    <td width="20%">@recipe.Name</td>
-                    <td width="30%">@recipe.Description</td>
-                    <td width="10%"><input type="checkbox" disabled checked="@recipe.Accepted" /></td>
-                    <td width="10%">@recipe.RecipeCategory.Title</td>
-                    <td width="10%"><a asp-action="Upsert" asp-route-id="@recipe.Id" class="admin-btn">Edit</a></td>
-                    <td width="10%"><a asp-action="Delete" asp-route-id="@recipe.Id" class="admin-btn">Delete</a></td>
-                </tr>
+            <tr>
+                <td width="10%">@recipe.Id</td>
+                <td width="15%">@recipe.Name</td>
+                <td width="25%">@recipe.Description</td>
+                <td width="10%">@recipe.RecipeCategory.Title</td>
+                <td width="10%">@recipe.DifficultyLevel</td>
+                <td width="10%">@recipe.PreparationTime</td>
+                <td width="10%"><input type="checkbox" disabled checked="@recipe.Accepted" /></td>
+                <td width="5%"><a asp-action="Upsert" asp-route-id="@recipe.Id" class="admin-btn">Edit</a></td>
+                <td width="5%"><a asp-action="Delete" asp-route-id="@recipe.Id" class="admin-btn">Delete</a></td>
+            </tr>
             }
         </tbody>
     </table>
