--- a/Cookify.Web/Areas/User/Views/Recipe/Upsert.cshtml
+++ b/Cookify.Web/Areas/User/Views/Recipe/Upsert.cshtml
@@ -35,6 +35,20 @@
                     <input asp-for="Recipe.Description" class="form-control" />
                     <span asp-validation-for="Recipe.Description" class="text-danger"></span>
                 </div>
+                <div class="col-4">
+                    <label asp-for="Recipe.DifficultyLevel"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Recipe.DifficultyLevel" class="form-control" />
+                    <span asp-validation-for="Recipe.DifficultyLevel" class="text-danger"></span>
+                </div>
+                <div class="col-4">
+                    <label asp-for="Recipe.PreparationTime"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Recipe.PreparationTime" class="form-control" />
+                    <span asp-validation-for="Recipe.PreparationTime" class="text-danger"></span>
+                </div>
             </div>
             <div class="form-group row">
                 <div class="col-4">
