--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -19,6 +19,9 @@
 @import "./components/search-bar";
 @import "./components/table";
 @import "./components/title-card";
+@import "./components/_user-panels.scss";
+@import "./components/_home-header.scss";
+@import "./components/_category-panels.scss";
 
 @import "./layout/admin-header";
 @import "./layout/container";
