Recent and most popular recipes added

--- a/Cookify.Web/Areas/User/Views/Home/Index.cshtml
+++ b/Cookify.Web/Areas/User/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         <span>Najpopularniejsze przepisy</span>
     </a>
     <a href="#" class="user-panels__item">
-        <img class ="user-panels__item"src="~/assets/placeholders/user-ingredients-search.jpg" />
+        <img class="user-panels__item" src="~/assets/placeholders/user-ingredients-search.jpg" />
         <span>Szukaj wg. składników</span>
     </a>
 </div>
@@ -49,5 +49,37 @@
     <a href="#" class="category-panels__item">
         <img src="~/assets/placeholders/category-soups.jpg" />
         <span>Zupy</span>
+    </a>
+</div>
+
+<h2 class="h2">Popularne przepisy</h2>
+<div class="product-grid ck-container">
+    <a href="#" class="product-grid__item">
+        <img src="~/assets/placeholders/chicken.jpg" />
+    </a>
+    <a href="#" class="product-grid__item">
+        <img src="~/assets/placeholders/chicken.jpg" />
+    </a>
+    <a href="#" class="product-grid__item">
+        <img src="~/assets/placeholders/chicken.jpg" />
+    </a>
+    <a href="#" class="product-grid__item">
+        <img src="~/assets/placeholders/chicken.jpg" />
+    </a>
+</div>
+
+<h2 class="h2">Najnowsze przepisy</h2>
+<div class="product-grid ck-container">
+    <a href="#" class="product-grid__item">
+        <img src="~/assets/placeholders/chicken.jpg" />
+    </a>
+    <a href="#" class="product-grid__item">
+        <img src="~/assets/placeholders/chicken.jpg" />
+    </a>
+    <a href="#" class="product-grid__item">
+        <img src="~/assets/placeholders/chicken.jpg" />
+    </a>
+    <a href="#" class="product-grid__item">
+        <img src="~/assets/placeholders/chicken.jpg" />
     </a>
 </div>
