--- a/Cookify.Web/wwwroot/scss/main.scss
+++ b/Cookify.Web/wwwroot/scss/main.scss
@@ -22,6 +22,7 @@
 @import "./components/_user-panels.scss";
 @import "./components/_home-header.scss";
 @import "./components/_category-panels.scss";
+@import "./components/_product-grid.scss";
 
 @import "./layout/admin-header";
 @import "./layout/container";
