Allow to display recipes that are not accepted

--- a/Cookify.Web/Views/Shared/Components/AdminNav/Default.cshtml
+++ b/Cookify.Web/Views/Shared/Components/AdminNav/Default.cshtml
@@ -13,7 +13,7 @@
                 <a asp-area="Admin" asp-controller="Recipe" asp-action="Upsert" class="ck-dropdown-menu__link">
                     Dodaj przepis
                 </a>
-                <a href="#" class="ck-dropdown-menu__link">
+                <a asp-area="Admin" asp-controller="Recipe" asp-action="Index" asp-route-toAccept="true" class="ck-dropdown-menu__link">
                     Przepisy do dodania
                 </a>
             </div>
